homework-6/files/appUsers/deployment-homework-6.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-app
  namespace: homework-6
  labels:
    app: users-app
spec:
  selector:
    matchLabels:
      app: users-app
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:     
        - name: userscontainer      
          image: christinagorina/homework-6:1.0.0
          ports:
            - containerPort: 8082          
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8082
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8082
            initialDelaySeconds: 3
            periodSeconds: 3
