homework-6/files/appUsers/service-homework-6.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-app
  namespace: homework-6
spec:
  type: ClusterIP
  ports:
    - port: 6666
      targetPort: 8082
  selector:
    app: users-app
