homework-6/files/appUsers/ingress-homework-6.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-app
  namespace: homework-6
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: users-app
                port:
                  number: 6666
            pathType: Prefix
            path: /
